<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="8dp">

        <TextView
            android:id="@+id/kategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_template"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:textColor="@color/custom_pink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nama_klub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginTop="4dp"
            android:text="@string/fullname_template"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintStart_toStartOf="@+id/kategori"
            app:layout_constraintTop_toBottomOf="@+id/kategori" />

        <Button
            android:id="@+id/detail_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nama_klub" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>